k8s/flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: app
          image: abdelfattah187/flaskapp:lts
          ports:
            - containerPort: 5002
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: flask-app-service
# spec:
#   selector:
#     app: flask-app
#   ports:
#     - protocol: TCP
#       port: 5002
#       targetPort: 5002

apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
