k8s/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-service  # Name of your Flask app ClusterIP service
                port:
                  number: 5002  # Port your Flask app is running on
